# inky-soup

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  JS_STYLE_GUIDE.md  LICENSE  README.md  deploy-sdcard.sh  deploy.sh  inky-soup.service  setup-crosscompile.sh  tail_remote_logs.sh  update-image.py
upload-server/: .dockerignore  .eslintrc.json  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  package.json  playwright.config.js  playwright.remote.config.js  run-tests.sh  test-server.sh  vitest.config.js
upload-server/e2e/: fixtures.js  gallery.spec.js  locking.spec.js  orphaned-recovery.spec.js  pipeline.spec.js  settings-rotation.spec.js  upload-queue.spec.js  upload.spec.js
upload-server/src/: cache_worker.rs  cleanup.rs  config.rs  derived_assets.rs  display_settings.rs  flash_queue.rs  image_locks.rs  main.rs  metadata.rs
upload-server/static/js/: dither-worker.js  dither.js  filter-worker.js  filters.js  main.js
upload-server/static/js/core/: constants.js  dom.js  state.js
upload-server/static/js/services/: api-client.js  dither-service.js  filter-service.js  flash-service.js  image-loader.js  upload-service.js
upload-server/static/js/ui/: delete-ui.js  (+11 more)
upload-server/templates/: index.html.tera  macros.html.tera  success.html.tera
upload-server/tests/: dither.test.js  filters.test.js  setup.js
upload-server/tests/helpers/: load-browser-module.js
upload-server/tests/services/: api-client.test.js  flash-service.test.js  image-loader.test.js
upload-server/tests/utils/: formatters.test.js  image-utils.test.js  uuid.test.js
(+72 files in other folders)
