[package]
name = "upload-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
rocket = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
# path = "/home/oldman/workspace/rocket/contrib/dyn_templates"
version = "0.1.0-rc.1"
features = ["tera"]
