[package]
name = "upload-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
image = "0.25"
rocket = "0.5.1"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
